University_system/force-app/main/default/objects/Course__c/Course__c.object-meta.xml
<CustomObject>
    <label>Course</label>
    <nameField>
        <label>Course Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>40</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>