University_system/force-app/main/default/objects/Course__c/fields/Specialty__c.field-meta.xml
<CustomField>
    <fullName>Specialty__c</fullName>
    <label>Specialty</label>
    <referenceTo>Specialty__c</referenceTo>
    <relationshipLabel>40</relationshipLabel>
    <relationshipName>X40</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>